--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <div class="cellphone">
+        <img src="imagens/frame-iphone.png" alt="">
+    </div>
+    <div class="home-screen">
+        <iframe src="extrapages/home.html" name="tela" frameborder="0"></iframe>
+    </div>
+    <div class="lateral-bar">
+        <div class="home-logo">
+            <a href="extrapages/home.html" target="tela">
+                <img src="imagens/logo-home.jpg" alt="">
+            </a>
+        </div>
+        <div class="youtube-logo">
+            <a href="extrapages/youtube.html" target="tela">
+                <img src="imagens/logo-youtube.jpg" alt="">
+            </a>
+        </div>
+        <div class="github-logo">
+            <a href="extrapages/github.html" target="tela">
+                <img src="imagens/logo-github.jpg" alt="">
+            </a>
+        </div>
+        <div class="instagram-logo">
+            <a href="extrapages/insta.html" target="tela">
+                <img src="imagens/logo-instagram.jpg" alt="">
+            </a>
+        </div>
+        <div class="x-logo">
+            <a href="extrapages/x.html" target="tela">
+                <img src="imagens/logo-twitter.jpg" alt="">
+            </a>
+        </div>
+        <div class="face-logo">
+            <a href="extrapages/face.html" target="tela">
+                <img src="imagens/logo-facebook.jpg" alt="">
+            </a>
+        </div>
+    </div>
 </body>
 </html>
